--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -1,19 +1,18 @@
 <script>
 document.writeln("<table border='0' cellpadding='4' cellspacing='0'>");
-for(var i=1;i<10;i++) {
+for(var i=1;i<=10;i++) {
 	document.writeln("<tr style='background-color:" + background(i) + "'>");
-	rollAttrSet("Physique",4);
+	document.writeln("<td>"+i+"</td>");
+	rollAttrSet();
 	document.writeln("</tr>");
 }
 
 document.writeln("</table>");
 
-//function roll(min, max) {
-//    return Math.round((Math.random() * (max - min) + min));
-//}
 function background(n) {
 	return n % 2 == 0 ? "#FFFFFF" : "#F8F8F8"; 
 }
+
 function rollAttrSet() {
 	var physique = roll(4);
 	var agility = roll(4);
@@ -23,7 +22,7 @@ function rollAttrSet() {
 	var charisma = roll(4);
 	var appearance = roll(4);
 	var bravery = roll(4);
-	var socialclass = roll(3);
+	var socialclass = roll(4);
 	var leadership = ((2*charisma)+(2*appearance)+(2*physique)+(2*intelligence)+(2*bravery)+(2*socialclass))/10;
 	var greed = roll(4);
 	var selfishness = roll(4);
@@ -46,6 +45,7 @@ function rollAttrSet() {
 	document.writeln("<td colspan=2>|</td>");
 	formatAttr("Bonus Points",bonus);
 }
+
 function roll(n) {
     var a = Array(n);
     for (var i = 0; i < n; i++)
@@ -53,9 +53,11 @@ function roll(n) {
     a = a.sort().slice(n - 3, n);
     return a[0] + a[1] + a[2];
 }
+
 function die(min, max) {
     return Math.round((Math.random() * (max - min) + min));
 }
+
 function formatAttr(attr, n){
 	document.writeln("<td>"+attr+"</td><td>"+n+"</td>");
 }
