--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -3,6 +3,8 @@
 </head>
 <body>
 	<style>body,table,tr,td,input{font:normal 8pt Tahoma;}</style>
+	<input type="text" id="player" value=""/></br>
+	<br/>
 	<input type="submit" value="Submit" onclick="createRolls3();return null;"/></br>
 	<script>
 	var rolls = 0;
@@ -20,13 +22,16 @@
 
 	function createRolls() {
 		rolls+=1;
+		var player = document.getElementById("player").value;
 		document.body.innerHTML = "";
 		document.writeln("<body>");
 		document.writeln("<style>body,table,tr,td,input{font:normal 8pt Tahoma}.outlineGood{color: black;-webkit-text-fill-color: white;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;}.outlineBad{color: black;-webkit-text-fill-color: red;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;}</style>");
+		document.writeln("<input type='text' id='player' value='" + player + "'/></br>");
+		document.writeln("<br/>");
 		document.writeln("<input type='submit' value='Submit (Tries : " + rolls + ")' onclick='createRolls();return null;'/><br/>");
 		document.writeln("<br/>");
 		document.writeln("<table border='0' cellpadding='4' cellspacing='0'>");
-		for(var i=1;i<=10;i++) {
+		for(var i=1;i<=1;i++) {
 			document.writeln("<tr style='background-color:" + background(i) + "'>");
 			document.writeln("<td>"+i+"</td>");
 			rollAttrSet();
@@ -34,10 +39,10 @@
 		}
 		document.writeln("</table>");
 		document.writeln("<br/>");
-		document.writeln("<a id='downloadlink'>Click to download rolls</a>");
+		document.writeln("<a id='downloadlink'>Click to save as HTML</a>");
 		var b = document.body.innerHTML;
 		var a = document.getElementById('downloadlink');
-		a.setAttribute('download', 'rolls.html');
+		a.setAttribute('download', player + '.html');
 		a.setAttribute('href', 'data:text/html;charset=UTF-8,'+b);
 		document.writeln("</body>");
 	}
@@ -54,8 +59,8 @@
 		var physique = roll(dice);
 		var agility = roll(dice);
 		var endurance = roll(dice);
-		var weightMale = (20+(endurance*10));
-		var weightFemale = (0+(endurance*10));
+		var weightMale = (30+(endurance*10));
+		var weightFemale = (10+(endurance*10));
 		var intelligence = roll(dice);
 		var faith = roll(dice);
 		var charisma = roll(dice);
@@ -67,9 +72,9 @@
 		var selfishness = roll(dice);
 		var lust = roll(dice);
 		var bonus = die(1,6)+die(1,6)-7;
-		formatAttr("Phy [" + (55+physique).formatInchesToFeetAndInches() + "/" + (53+physique).formatInchesToFeetAndInches() + "]",physique);
+		formatAttr("Phy [" + (53+physique).formatInchesToFeetAndInches() + "/" + (55+physique).formatInchesToFeetAndInches() + "]",physique);
 		formatAttr("Agi",agility);
-		formatAttr("End [" + weightMale + "lbs/" + weightFemale + "lbs]",endurance);
+		formatAttr("End [" + weightFemale + "lbs/" + weightMale + "lbs]",endurance);
 		document.writeln("<td>|</td>");
 		formatAttr("Int",intelligence);
 		formatAttr("Faith",faith);
@@ -90,11 +95,12 @@
 		//document.writeln("<td>|</td>");
 		//formatAttr("Total",physique+agility+endurance+intelligence+faith+charisma+appearance+bravery+socialclass+greed+selfishness+lust+bonus);
 		var bogeyCount = 0;
+		var bogeys = [];
 		for(var i=0;i<3;i++) {
 			var r = die(1,100);
 			if (r>=35) {
 				bogeyCount+=1;
-				document.writeln("<tr><td></td><td colspan=20>Bogey " + bogeyCount +  " : " + bogey[r-35] + "</td></tr>");
+				document.writeln("<tr><td></td><td colspan=20>Bogeys " + bogeyCount +  " : " + bogey[r-35] + "</td></tr>");
 			}
 		}
 	}
