--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -66,7 +66,8 @@
 		var charisma = roll(dice);
 		var appearance = roll(dice);
 		var bravery = roll(dice);
-		var socialclass = die(1,5)+die(1,5)+die(1,5);
+		//var socialclass = die(1,5)+die(1,5)+die(1,5);
+		var socialclass = 11;
 		var leadership = ((2*charisma)+(2*appearance)+(2*physique)+(2*intelligence)+(2*bravery)+(2*socialclass))/10;
 		var greed = roll(dice);
 		var selfishness = roll(dice);
