--- a/index.html
+++ b/index.html
@@ -1,8 +1,287 @@
 <html>
 <head>
-  <title>Fantasy Wargaming SRD</title>
+	<title>Fantasy Wargaming SRD</title>
+	<style>
+	table, th, tr, td {
+		vertical-align: top;
+	}
+	.nobility {
+		background-color: #CCFFCC;
+	}
+	.poorfree {
+		background-color: #EEEEEE;
+	}
+	.unfree {
+		background-color: #CCCCCC;
+	}
+	.slave {
+		background-color: #FFCCCC;
+	}
+	</style>
 </head>
 <body>
-
+	<h1>Character Creation</h1>
+		<h2>Attributes</h2>
+			<p>
+				Attributes are rolled in the order listed below, using 4d6 and keeping the highest three dice for a range of 3 to 18.
+			</p>
+			<p>
+				Roll 4d6 and keep the highest three dice for the following attributes:
+			</p>
+			<ul>
+				<li>Physique</li>
+				<li>Agility</li>
+				<li>Endurance</li>
+				<li>Intelligence</li>
+				<li>Faith</li>
+				<li>Charisma</li>
+				<li>Appearance</li>
+				<li>Bravery</li>
+				<li>Greed</li>
+				<li>Selfishness</li>
+				<li>Lust</li>
+			</ul>
+			<p>
+				<b>The maximum value for any attribute is 20, not counting points from any bogey.</b>
+			</p>
+		<h2>Social Class</h2>
+			<p>
+				Social class is rolled using 3d5 (not 3d6) for a range of 3 to 15.
+			</p>
+			<table>
+				<thead>
+					<th>Social<br/>Class</th>
+					<th>Landowning<br/>& Warrior<br/>classes</th>
+					<th>Priesthood</th>
+					<th>Urban Dwellers</th>
+					<th>Rural Dwellers</th>
+					<th>Cost in<br/>Silver coins<br/>to increase<br/>rank</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>22</td>
+						<td class="nobility">Emperor / Empress</td>
+						<td class="nobility">Kai</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>21</td>
+						<td class="nobility">King / QUeen</td>
+						<td class="nobility"></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>20</td>
+						<td class="nobility">Archduke / Archduchess</td>
+						<td class="nobility">Hierophant</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>19</td>
+						<td class="nobility">Duke / Duchess</td>
+						<td class="nobility"></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>18</td>
+						<td class="nobility">Count / Countess</td>
+						<td class="nobility">Archvedic</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>17</td>
+						<td class="nobility">Rich Baron / Baroness</td>
+						<td class="nobility">Vedic</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>16</td>
+						<td class="nobility">Poor Baron / Baroness, Rich Champion</td>
+						<td>Legate</td>
+						<td>Mayor of a town</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>15</td>
+						<td class="nobility">Poor Champion</td>
+						<td>Archpriest</td>
+						<td>Guild leader (1)</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>14</td>
+						<td>Landless Champion</td>
+						<td>Rich priest</td>
+						<td>Guild Member (1),<br/>Guild Leader (2)</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>13</td>
+						<td>Captain</td>
+						<td>Priest</td>
+						<td>Guild Journeyman (1),<br/>Guild Member (2),<br/>Guild Leader (3)</td>
+						<td>Champion's agent in their absence</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td>Sergeant</td>
+						<td>Poor priest</td>
+						<td>Guild Journeyman (2),<br/>Guild Member (3),<br/>Self-employed trades person</td>
+						<td>Rich free person</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>11</td>
+						<td>Soldier</td>
+						<td>Supplicant (free)</td>
+						<td>Guild Journeyman (3),<br/>employed skilled laborer</td>
+						<td>Poor free person</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>10</td>
+						<td>Archer / Mercenary</td>
+						<td>Supplicant (free)</td>
+						<td>Employed laborer</td>
+						<td>Sokeman</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td class="unfree">Conscript peasant, militia / POW</td>
+						<td class="unfree">Supplicant (serf)</td>
+						<td class="poorfree">Servant</td>
+						<td class="poorfree">Rich villein</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>8</td>
+						<td class="unfree">Conscript peasant, militia / POW</td>
+						<td class="unfree">Supplicant (serf)</td>
+						<td class="poorfree">Unemployed</td>
+						<td class="poorfree">Poor villein</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td class="unfree">Outlawed soldier</td>
+						<td class="unfree">Common serf</td>
+						<td class="poorfree">Thief</td>
+						<td class="unfree">Cottar (serf) / farm laborer</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="poorfree">Beggar</td>
+						<td class="unfree">Bordar (serf) / land laborer</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree">Recently escaped serf</td>
+						<td class="unfree">Outlaw / Forest dweller</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree">Recently escaped slave</td>
+						<td class="slave">Slave</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="slave">Slave</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="slave">Slave</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>1</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="slave">Slave</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>0</td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="unfree"></td>
+						<td class="slave">Slave</td>
+						<td></td>
+					</tr>
+				</tbody>
+			</table>
+			<br/>
+			<table>
+				<tr>
+					<td>
+						Nobility
+					</td>
+					<td class="nobility" style="height:26px;width:26px;">
+						&nbsp;
+					</td>
+					<td>
+						Poor Free
+					</td>
+					<td class="poorfree" style="height:26px;width:26px;">
+						&nbsp;
+					</td>
+					<td>
+						Unfree
+					</td>
+					<td class="unfree" style="height:26px;width:26px;">
+						&nbsp;
+					</td>
+					<td>
+						Slave
+					</td>
+					<td class="slave" style="height:26px;width:26px;">
+						&nbsp;
+					</td>
+				</tr>
+			</table>
+		<h2>Skills</h2>
+			<h3>Climbing</h3>
+			<h3>Riding</h3>
+			<h3>Singing</h3>
+			<h3>Stealing</h3>
+			<h3>Swiming</h3>
+			<h3>Tracking</h3>
+		<h2>Bogeys</h2>
+	<h1>Combat</h1>
+	<h1>Magic</h1>
 </body>
 </html>
