--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -150,6 +150,13 @@
 	}
 	
 	var bogey = [
+		"(23) Inept Climber : You can't climb, the best you can do is hold yourself in position",
+		"(24) Talented Climber : +2 to all Climbing checks and you climb well",
+		"(25) Inept Rider : You can't rind any animal, the best you can do is sit on a mount",
+		"(26) Talented Rider:  +2 to all Riding checks and you ride well",
+		"(27) Inept Singer : -2 to all Singing checks and you can't sing for any purpose that requires it",
+		"(28) Talented Singer : +2 to all Singing checks and you sing well",
+		"(29) Inept Swimmer : -2 to all Simmin
 		"31",
 		"32",
 		"33",
@@ -218,8 +225,8 @@
 		"96",
 		"97",
 		"98",
-		"99",
-		"100",
+		"99 : Something Awful",
+		"100 : Something Wonderful",
 	];
 	</script>
 </body>
