--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -150,23 +150,24 @@
 	}
 	
 	var bogey = [
-		"(23) Inept Climber : You can't climb, the best you can do is hold yourself in position",
-		"(24) Talented Climber : +2 to all Climbing checks and you climb well",
-		"(25) Inept Rider : You can't rind any animal, the best you can do is sit on a mount",
-		"(26) Talented Rider:  +2 to all Riding checks and you ride well",
-		"(27) Inept Singer : -2 to all Singing checks and you can't sing for any purpose that requires it",
-		"(28) Talented Singer : +2 to all Singing checks and you sing well",
-		"(29) Inept Swimmer : -2 to all Simmin
-		"31",
-		"32",
-		"33",
-		"34",
-		"35",
-		"36",
-		"37",
-		"38",
-		"39",
-		"40",
+		"Inept Climber : You can't climb, the best you can do is hold yourself in position",
+		"Talented Climber : +2 to all Climbing checks and you climb well",
+		"Inept Rider : You can't rind any animal, the best you can do is sit on a mount",
+		"Talented Rider:  +2 to all Riding checks and you ride well",
+		"Inept Singer : You can't sing and you can't sing for magical or religious purposes",
+		"Talented Singer : +2 to all Singing checks and you sing well",
+		"Inept Swimmer : You can't swim and begin to drown as soon as you enter water",
+		"Talented Swimmer: +2 to all Swimming checks and you swim well",
+		"Inept Thief : You can't steal and are always seen or caught when making any thieving attempt",
+		"Talented Thief : +2 to all Stealing checks and you steal well",
+		"Inept Tracker : You can't track anything ever",
+		"Talented Tracker : +2 to all Tracking checks and you track well",
+		"Artless Adventurer : You are not able to take combat levels",
+		"Gifted Adventurer : +2 to all combat rolls and rolls to overcome obstacles, you are proficient with all weapons, armor, and shields",
+		"Artless Magician : You are not able to take magic levels",
+		"Gifted Magician : +2 to all magic rolls, you regain mana at double the normal rate",
+		"Artless Miracleworker : You are not able to take religious levels",
+		"Gifted Miracleworker : +2 to all religious rolls", 
 		"41",
 		"42",
 		"43",
