--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -163,11 +163,11 @@
 		"Inept Tracker : You can't track anything ever",
 		"Talented Tracker : +2 to all Tracking checks and you track well",
 		"Artless Adventurer : You are not able to take combat levels",
-		"Gifted Adventurer : +2 to all combat rolls and rolls to overcome obstacles, you are proficient with all weapons, armor, and shields",
+		"Gifted Adventurer : +2 to all combat rolls and rolls to overcome obstacles, you require 1 additional point of damage to be scored to suffer negative effects in combat and never suffer from any specific negative combat effect for longer than 1 round",
 		"Artless Magician : You are not able to take magic levels",
 		"Gifted Magician : +2 to all magic rolls, you regain mana at double the normal rate",
 		"Artless Miracleworker : You are not able to take religious levels",
-		"Gifted Miracleworker : +2 to all religious rolls", 
+		"Gifted Miracleworker : +2 to all religious rolls, piety gains are doubled and piety losses are halved", 
 		"41",
 		"42",
 		"43",
