--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -99,7 +99,7 @@
 		var bogeys = [];
 		for(var i=0;i<3;i++) {
 			var r = die(1,100);
-			if (r>=35) {
+			if (r>=bogey.length) {
 				bogeyCount+=1;
 				document.writeln("<tr><td></td><td colspan=20>Bogeys " + bogeyCount +  " : " + bogey[r-35] + "</td></tr>");
 			}
@@ -168,38 +168,38 @@
 		"Gifted Magician : +2 to all magic rolls, you regain mana at double the normal rate",
 		"Artless Miracleworker : You are not able to take religious levels",
 		"Gifted Miracleworker : +2 to all religious rolls, piety gains are doubled and piety losses are halved", 
-		"41",
-		"42",
-		"43",
-		"44",
-		"45",
-		"46",
-		"47",
-		"48",
-		"49",
-		"50",
-		"51",
-		"52",
-		"53",
-		"54",
-		"55",
-		"56",
-		"57",
-		"58",
-		"59",
-		"60",
-		"61",
-		"62",
-		"63",
-		"64",
-		"65",
-		"66",
-		"67",
-		"68",
-		"69",
-		"70",
-		"71",
-		"72",
+		"Weak : -2 Physique",
+		"Strong : +2 Physique, ",
+		"Clumsy : -2 Agility",
+		"Agile : +2 Agility",
+		"Sickly : -2 Endurance",
+		"Healthy : +2 Endurance",
+		"Dull : -2 Intelligence",
+		"Sharp : +2 Intelligence",
+		"Faithless : -2 Faith",
+		"Devout : +2 Faith",
+		"Shy : -2 Charisma",
+		"Affable : +2 Charisma",
+		"Ugly : -2 Appearance",
+		"Beautiful : +2 Appearance",
+		"Craven : -2 Bravery",
+		"Fearless : +2 Bravery",
+		"Miserly : +2 Greed",
+		"Generous : -2 Greed",
+		"Narcissistic : +2 Selfishness",
+		"Altruistic : -2 Selfishness",
+		"Wanton : +2 Lust",
+		"Chaste : -2 Lust",
+		"Susceptibility to Alcohol",
+		"Resistance to Alcohol",
+		"Susceptibility to Fatigue",
+		"Resistance to Fatigue",
+		"Susceptibility to Infection",
+		"Resistance to Infection",
+		"Susceptibiity to Pain : All damage received is considered doubled (but not actually doubled) but only for the purposes of remaining conscious or resisting torture",
+		"Resistance to Pain : Take half damage (round up) from all sources",
+		"Poor eyesight : -1 Agility, cannot read or see anything clearly beyond 30 feet",
+		"Keen eyesight : 50% chance to spot concealed persons or items within 30 feet, immune to visual illusions",
 		"73",
 		"74",
 		"75",
