--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -190,36 +190,36 @@
 		"Altruistic : -2 Selfishness",
 		"Wanton : +2 Lust",
 		"Chaste : -2 Lust",
-		"Susceptibility to Alcohol",
-		"Resistance to Alcohol",
-		"Susceptibility to Fatigue",
-		"Resistance to Fatigue",
-		"Susceptibility to Infection",
-		"Resistance to Infection",
+		"Susceptibility to Alcohol : All alcohol, drugs, narcotics, and poisons take half as much to affect you, half the normal time to affect you, last twice as long, and have double any numerical effects",
+		"Resistance to Alcohol : All alcohol, drugs, narcotics, and poisons take twice as much to affect you, take twice as long to affect you, last half as long, and have half any numerical effects",
+		"Susceptibility to Fatigue : You take half as long to get fatigued and take twice as long to recover from fatigue",
+		"Resistance to Fatigue : You take twice as long to get fatigued and take half as long to recover from fatigue",
+		"Susceptibility to Infection : You are highly susceptable to illness and infection",
+		"Resistance to Infection : You are highly resistance to illness and infection",
 		"Susceptibiity to Pain : All damage received is considered doubled (but not actually doubled) but only for the purposes of remaining conscious or resisting torture",
 		"Resistance to Pain : Take half damage (round up) from all sources",
-		"Poor eyesight : -1 Agility, cannot read or see anything clearly beyond 30 feet",
-		"Keen eyesight : 50% chance to spot concealed persons or items within 30 feet, immune to visual illusions",
-		"73",
-		"74",
-		"75",
-		"76",
-		"77",
-		"78",
-		"79",
-		"80",
-		"81",
-		"82",
-		"83",
-		"84",
-		"85",
-		"86",
-		"87",
-		"88",
-		"89",
-		"90",
-		"91",
-		"92",
+		"Poor Eyesight : -2 Agility, cannot read or see anything clearly beyond 30 feet",
+		"Keen Eyesight : You can see twice as far as normal, 50% chance to spot concealed things within 30 feet, immune to visual illusions",
+		"Poor Hearing : You can only hear the loudest noises and you never whisper",
+		"Keen Hearing : You can hear twice as far as normal, 50% change to hear concealed things within 30 feet, immune to auditory illusions",
+		"Poor Smell : You can only smell overwhelming odors",
+		"Keen Smell : You can identify famililar things by smell, 50% chance to smell concealed things with a familiar or strong odor within 30 ft, immune to olfactory illusions",
+		"Insomnia : -2 Endurance, fitful sleep, always tired, difficult to surprise while sleeping",
+		"Like a Log : +2 Endurance, able to sleep soundly anywhere under any conditions, very easy to surprise while sleeping",
+		"Belligerent : -2 Leadership, takes offense at any and all criticism",
+		"Born Leader : +2 Leadership, never takes offense",
+		"Weak Mind : Always fails morale and control tests",
+		"Strong Mind : Never fails morale or control tests",
+		"Bad Luck : -1 on all Luck rolls",
+		"Good Luck : +1 on all Luck rolls",
+		"Bad with Animals : Animals (non-sentient) do not like you, you cannot own pets, mounts are difficult for you to control, you can never ride well",
+		"Good with Animals : Animals (non-sentient) really like you, you easily own pets and can teach them tricks, mounts easily trust and obey you, you can ride and ride well",
+		"Inoffensive : You have difficulty inspiring Anger in others, oppoents you target for Anger control tests have a +4 Bravery for the attempt",
+		"Taunting : You can easily inspire Anger in others, opponents you target for Anger control tests have a -4 Bravery for the attempt",
+		"Bumbler : You have difficulty inspiring Greed in others, opponents you target for Greed control tests have a -4 Greed for the attempt",
+		"Grifter : You can easily inspire Greed in others, opponents you target for Greed control tests have a +4 Greed for the attempt",
+		"Repulsive : You have difficulty inspiring Lust in others, opponents you target for Lust control tests have a -4 Lust for the attempt",
+		"Seductive : You can easily inspire Lust in others, opponents you target for Lust control tests have a +4 Lust for the attempt",
 		"93",
 		"94",
 		"95",
