--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -220,14 +220,14 @@
 		"Grifter : You can easily inspire Greed in others, opponents you target for Greed control tests have a +4 Greed for the attempt",
 		"Repulsive : You have difficulty inspiring Lust in others, opponents you target for Lust control tests have a -4 Lust for the attempt",
 		"Seductive : You can easily inspire Lust in others, opponents you target for Lust control tests have a +4 Lust for the attempt",
-		"93",
-		"94",
-		"95",
-		"96",
-		"97",
-		"98",
-		"99 : Something Awful",
-		"100 : Something Wonderful",
+		"Selfishness Penalty : You have difficulty inspiring Selfishness in others, opponents you target for Selfishness control tests have a -4 Selfishness for the attempt",
+		"Selfishness Bonus : You can easily inspire Selfishness in others, opponents you target for Selfishness control tests have a +4 Selfishness for the attempt",
+		"Haunted : You are haunted by ghosts",
+		"Medium : You can see and speak to ghosts",
+		"Persecuted : Something about you causes people to target you for verbal and physical violence, you are usually the go to target for verbal or physical abuse",
+		"Roll again 1d3 times",
+		"Something Abhorrent",
+		"Something Wonderful",
 	];
 	</script>
 </body>
